@@ -4,6 +4,3 @@ Description=Zentyal logger daemon
 [Service]
 ExecStart=/usr/share/zentyal/loggerd
 Restart=on-failure
-
-[Install]
-WantedBy=multi-user.target
