@@ -8,5 +8,7 @@ After=network.target
 
 [Service]
 ExecStart=/usr/sbin/nginx -c <% $conf %>
+ExecStop=/sbin/start-stop-daemon --quiet --stop --retry QUIT/5 --pidfile /var/lib/zentyal/tmp/nginx.pid
 Restart=on-failure
-RestartSec=5
+TimeoutStopSec=5
+KillMode=mixed
