@@ -2,19 +2,14 @@
     $socketpath
     $socketname
     $script
-    $module
+    $reloadfile
     $user
     $group
 </%args>
 [Unit]
-Description=uWSGI daemon for Zentyal <% $module %>
-After=network.target
+Description=uWSGI daemon for Zentyal webadmin
 
 [Service]
 ExecStartPre=/bin/sh -c '[ -d <% $socketpath %> ] || install -m 755 -o <% $user %> -g www-data -d <% $socketpath %>'
-ExecStart=/usr/bin/uwsgi --ignore-sigpipe --buffer-size 10240 --plugins 0:psgi --uid <% $user %> --gid <% $group %> --umask 000 -s <% $socketpath %>/<% $socketname %> --psgi <% $script %>
+ExecStart=/usr/bin/uwsgi --master --ignore-sigpipe --buffer-size 10240 --plugins 0:psgi --uid <% $user %> --gid <% $group %> --umask 000 -s <% $socketpath %>/<% $socketname %> --touch-reload /var/lib/zentyal/webadmin.reload --psgi <% $script %>
 Restart=on-failure
-RestartSec=5
-
-[Install]
-WantedBy=multi-user.target
