@@ -4,6 +4,3 @@ Description=Zentyal daemon to check uid and gid numbers
 [Service]
 ExecStart=/usr/bin/perl /usr/share/perl5/EBox/Samba/SetUidGidNumbers.pm
 Restart=on-failure
-
-[Install]
-WantedBy=multi-user.target
