@@ -5,6 +5,7 @@
 	+ Remove deprecated 'remoteservices' internal module
 	+ Remove OpenChange crashes notifications in the dashboard
 	+ Get list of interfaces from /sys/class/net
+	+ Better management of webadmin reload using uwsgi master process
 4.2.2
 	+ Allow upgrade of packages that are not present in QA repo
 	+ Avoid crash in manage-logs script with undefined mods
